tests/regression/errors/basic/import_error_5.csd
// Import error test 5
yeet "nonexistent_module_5"
sus result drip = some_function(5)
